including documentation help, source code and feedback.  If you are interested
in contributing, please visit http://incubator.apache.org/uima/get-involved.html.


5. How to Report Issues

The Apache UIMA project uses JIRA for issue tracking.  Please report any 
issues you find at http://issues.apache.org/jira/browse/uima.


6. List of JIRA Issues Fixed in this Release


Release Notes - UIMA - Version 2.2

** Sub-task
    * [UIMA-326] - Add Out-of-typesystem Data Support to XMI Serialization
    * [UIMA-343] - Framework support for import in CPE descriptor
    * [UIMA-344] - CPE GUI should create <import> elements instead of <include> 
    * [UIMA-345] - Documentation for <import> in CPE Descriptor

** Bug
    * [UIMA-32] - CPE GUI doesn't parse ${CPM_HOME} variable
    * [UIMA-194] - Tools highlight incorrect annotation offsets due to XML serialization bug in Sun Java 1.4.2
    * [UIMA-269] - Test PEAR Files don't run
    * [UIMA-270] - When CVD run with -desc option, status bar still says "(No AE Loaded)"
    * [UIMA-271] - PEAR Installer doesn't enable "Install" button if PEAR file name is input by keyboard
    * [UIMA-303] - Problems with BoundedQueue.dequeue(timeout)
    * [UIMA-316] - CVD does not display auto-indexes correctly
    * [UIMA-329] - extractAndBuild scripts need to check for presence of JAI libraries
    * [UIMA-330] - Calling reconfigure() on aggregate AE doesn't call reconfigure() on FlowController.
    * [UIMA-336] - Schema validation fails for service client descriptors
    * [UIMA-347] - Custom indexes defined in C++ annotators are ignored
    * [UIMA-356] - fix IBM dependency in CVD log properties file
    * [UIMA-359] - Blob serialization problems
    * [UIMA-362] - CVD UIMA about box is editable
    * [UIMA-364] - CDE add type button and other actions broken
    * [UIMA-365] - call tae.destroy() in AnalysisEngine_implTest to close open file handles 