@@ -189,6 +189,9 @@ issues you find at
   
 <h2><a name="list.issues">6. List of JIRA Issues Fixed in this Release</a></h2>
     
+
+        Release Notes - UIMA - Version 2.2
+    
 <h2>        Sub-task
 </h2>
 <ul>
@@ -351,6 +354,10 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-517'>UIMA-517</a>] -         CDE has internal bug - shows up in Error log when using the Add delegate to an aggregate when picking top level project
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-519'>UIMA-519</a>] -         Infinite Loop in AnnotationIndexImpl tree()
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-520'>UIMA-520</a>] -         Calling CasCreationUtils to produce a custom resource is ignoring the passed in ResourceManager in some cases
+</li>
 </ul>
     
 <h2>        Improvement
@@ -426,6 +433,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-465'>UIMA-465</a>] -         Need getViewIterator() method to work with a variable number of views
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-499'>UIMA-499</a>] -         Make it easier for users to view UIMA JavaDocs from Eclipse
+</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-500'>UIMA-500</a>] -         Reduce excessive synch lock contention caused by calls to ll_isValidTypeCode that are not needed
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-501'>UIMA-501</a>] -         Cas Editor: Finish the about dialog
@@ -471,6 +480,7 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-473'>UIMA-473</a>] -         Update README and RELEASE_NOTES
 </li>
 </ul>
+            
             
 </body>
 </html>
